# amocrm-bot

./: .example.env  .gitignore  README.md  pyproject.toml
app/: main.py
app/crm/: __init__.py  init_token.py  setup_amocrm.py
app/handlers/: __init__.py  report.py  start.py  unknown_text.py
app/scheduler/: __init__.py  tasks.py
app/services/: amocrm.py  report.py
